--- a/Analog Clock Project/clockStyle.css
+++ b/Analog Clock Project/clockStyle.css
@@ -16,11 +16,11 @@ width:100%;
 
 .clock{
     width:35%;
-    height: 60%;
+    height: 68%;
     display: flex;
     justify-content: center;
 align-items:center;
-background: #fff url(clock.png);
+background:   url(./clock2.png);
 background-size: cover;
 background-position: center;
 border-radius: 50%;
@@ -136,6 +136,11 @@ height:160px;
     bottom:125px;
     z-index:10;
 }
+
+
+
+
+
 
 
 
